hphp/hack/test/typecheck/expression_trees/variable_call.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function foo(): void {
  $fun_call = Code`((function(ExampleString): ExampleInt) $foo) ==> {
    $foo("baz");
  }`;
}
